--- a/src/styles/Grid.css
+++ b/src/styles/Grid.css
@@ -5,6 +5,7 @@
     height: 700px;
     margin: 2.5%;
     padding: 8px;
+    border-radius: 8px;
 
     background: rgba(255, 255, 255, 0.8);
 
@@ -13,3 +14,25 @@
     gap: 4px
 }
 
+@media (max-width: 425px) {
+    .grid {
+        display: grid;
+        position: absolute;
+        top: 535px;
+        left: 41.5%;
+        /* width: 100%; */
+        /* height: 100%; */
+        transform: scale(1.25);
+        /* margin: 2.5%; */
+        /* margin-left: auto; */
+        /* margin-right: auto; */
+        padding: 8px;
+        border-radius: 8px;
+    
+        background: rgba(255, 255, 255, 0.8);
+    
+        grid-template-columns: repeat(16,40px);
+        grid-template-rows: repeat(16,40px);
+        gap: 4px
+    }
+}
